tests/src/frontend/syntax/invalid/char_escape_too_short.sk
fun main(): String {
  '\u0DF'.toString()
}
